# AutoWeChat

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
backend/: CMakeLists.txt  CMakePresets.json
backend/src/: CMakeLists.txt  main.cpp
backend/src/domain/: CMakeLists.txt
backend/src/domain/model/: User.h
backend/src/infrastructure/: CMakeLists.txt
backend/src/infrastructure/logging/: LogApi.cpp  LogApi.h
backend/src/service/: AuthServiceImpl.cpp  AuthServiceImpl.h  CMakeLists.txt
backend/tests/: CMakeLists.txt
docs/: backend-design.md  build-guide.md  directory-structure.md  environment-setup.md  frontend-design.md  grpc-integration.md  index.md  proto-design.md  requirements-analysis.md  system-architecture.md  testing-guide.md
frontend/: CMakeLists.txt
frontend/resources/: resources.qrc
frontend/src/: CMakeLists.txt
frontend/src/app/: CMakeLists.txt  main.cpp
frontend/src/app/viewModel/: LogViewModel.h
frontend/src/domain/: CMakeLists.txt
frontend/src/domain/model/: Message.h  User.h
frontend/src/infrastructure/: CMakeLists.txt
frontend/src/qml/: CMakeLists.txt  Main.qml
frontend/src/qml/dialogs/: LoginDialog.qml  MainDialog.qml
frontend/tests/: CMakeLists.txt
proto/: CMakeLists.txt  auth.proto  chat.proto  common.proto  contact.proto
shared/: CMakeLists.txt
shared/logging/: LoggerService.h
src/app/viewModel/: ApplicationControllorViewModel.cpp  ApplicationControllorViewModel.h  LogViewModel.cpp
src/domain/: CMakeLists.txt
src/infrastructure/: CMakeLists.txt
src/infrastructure/logging/: LoggerService.cpp
tests/: CMakeLists.txt
